Fix typos in case studies

--- a/portfolio/_posts/2018-03-04-zip.html
+++ b/portfolio/_posts/2018-03-04-zip.html
@@ -27,7 +27,7 @@ nextPost: /portfolio/warehouse-lv
 					<p>Padarīt mobilo sludinājumu lietošanu draudzīgāku. Vēlamais rezultāts - lai mobilā portāla lietošana būtu vēl patīkamāka par desktop versiju. Lai tieši mobilā versija kļūst par noklusējuma vidi, kurā lietotāji izvēlas veidot un meklēt sludinājumus.</p>
 				</div>
 				<div class="small-12 medium-centered">
-					<p class="txt-mega xlarge-pull-1 xlarge-push-1">Būtībā mobilās versijas nebija. Bija desktop versija, kurā nācās navigēt arī mobilo ierīču lietotājiem.</p>
+					<p class="txt-mega xlarge-pull-1 xlarge-push-1">Zip.lv mobilās versijas nebija. Bija desktop versija, kurā nācās navigēt arī mobilo ierīču lietotājiem.</p>
 				</div>
 			</div>
 		</section>
@@ -46,7 +46,7 @@ nextPost: /portfolio/warehouse-lv
 				</div>
 				<div class="medium-11 large-8 medium-centered clear-centered">
 					<h3 class="h3 p-after-figure">Pēc iespējas mazāk soļu</h3>
-					<p>Viens no risinājumiem, kā uzlabotu lietotāju pieredzi, bija iespēja šķirstīt sludinājumu bildes atrodoties sludinājumu kopskatā, bez vajadzības atvērt individuālu sludinājumu. Skatoties, kā lietotāji lieto citu sludinājumu portāla mobilās versijas, secinājām, ka sludinājums nereti tiek atvērts tikai tāpēc, lai apskatītu bildes un uzreiz aizvērts. Sludinājumu kopskatā lietotāji var redzēt visu svarīgāko informāciju par sludinājumu, izšķirstīt bildes un arī sazināties ar sludinājuma autoru. Tas viss &ndash; neatverot sludinājumu.</p>
+					<p>Viens no risinājumiem, kā uzlabotu lietotāju pieredzi, bija iespēja šķirstīt sludinājumu bildes atrodoties sludinājumu kopskatā, bez vajadzības atvērt individuālu sludinājumu. Skatoties, kā tiek lietotas citu sludinājumu portālu mobilās versijas, secinājām, ka sludinājums nereti tiek atvērts tikai tāpēc, lai apskatītu bildes un uzreiz tiek aizvērts. Sludinājumu kopskatā lietotāji var redzēt visu svarīgāko informāciju par sludinājumu, izšķirstīt bildes un arī sazināties ar sludinājuma autoru. Tas viss &ndash; neatverot sludinājumu.</p>
 				</div>
 				<div class="small-12">
 					<figure>
@@ -61,7 +61,7 @@ nextPost: /portfolio/warehouse-lv
 			<div class="page-width">
 				<h2 class="h3">Reklāmas vietas izvēle</h2>
 				<div class="small-centered large-9">
-					<p class="centered">Pret reklāmām visiem ir negatīva attieksme, bet reklāma mums ļauj bez maksas lietot portālus, bez kuriem mūsu ikdiena vairs nav iedomājama. Tas pats ir ar Zip.lv - reklāma ir nepieciešama portāla pastāvēšanai. Izceltie sludinājumi ir vizuāli ļoti līdzīgi pārējiem, tie tiek novietoti tikai tajās sadaļās, kurās tiem ir loģiska vieta (izceltie auto sludinājumi netiek ievietoti nekustamo īpašumu sadaļā) un tie nekādi netraucē pārējo sludinājumu apskatē.</p>
+					<p class="centered">Pret reklāmām visiem ir negatīva attieksme, bet tieši reklāma nereti ir tā, kas mums ļauj bez maksas lietot portālus, bez kuriem mūsu ikdiena vairs nav iedomājama. Tas pats ir ar Zip.lv - reklāma ir nepieciešama portāla pastāvēšanai. Izceltie sludinājumi ir vizuāli ļoti līdzīgi pārējiem, tie tiek novietoti tikai tajās sadaļās, kurās tiem ir loģiska vieta (izceltie auto sludinājumi netiek ievietoti nekustamo īpašumu sadaļā), un tie nekādi netraucē pārējo sludinājumu apskatē.</p>
 				</div>
 				<div class="small-centered small-12 medium-8 large-5">
 					<figure class="dummy-post-container">
@@ -101,7 +101,7 @@ nextPost: /portfolio/warehouse-lv
 		<section>
 			<div class="page-width">
 				<div class="medium-11 large-8 medium-centered clear-centered">
-					<p class="paragraph-no-margin">Komfortablai mobilo aplikāciju lietošanai izmantojām datu ievades/apskates veidus - pirksta pieskārienus, pirksta bīdīšanu horizontāli/vertikāli. Tāpēc sludinājumu pievienošanas formā un atlasē tiek izmantoti stepperi, slīdņi, radiogrupas vai slēdži, nevis desktop versijās ierakstie ievades lauku veidi.</p>
+					<p class="paragraph-no-margin">Vēlējāmies, lai datu ievade un atlase arī uz mobilajām ierīcēm būtu lietotājam ērta, tāpēc izvēlējāmies tieši šīm ierīcēm atbilstošus datu ievades veidus - pirksta pieskārienus, pirksta bīdīšanu horizontāli/vertikāli. Tāpēc sludinājumu pievienošanas formā un atlasē tiek izmantoti stepperi, slīdņi, radiogrupas un slēdži, nevis desktop versijās ierakstie ievades lauku veidi.</p>
 				</div>
 				<div class="small-12">
 					<figure>
@@ -136,7 +136,7 @@ nextPost: /portfolio/warehouse-lv
 			<div class="page-width">
 				<div class="medium-11 large-8 medium-centered clear-centered">
 					<h3 class="h3 paragraph-no-margin">Jauna sludinājuma veidošana</h3>
-					<p>Sludinājuma veidošanas formā ir svarīgi tas, lai ievades lauki nebūtu par maz vai par daudz. Ja kāds svarīgs lauks tiek izlaists, sludinājums nav pilnīgs, ja lauku ir par daudz - sludinājuma izveide var šķist pārāk nogurdinoša. Veidojot sludinājumu, ievades lauki parādās tikai tad, ja tos nepieciešams aizpildīt.</p>
+					<p>Sludinājuma veidošanas formā ir svarīgi, lai ievades lauki nebūtu par maz vai par daudz. Ja kāds svarīgs lauks tiek izlaists, sludinājums nav pilnīgs, ja lauku ir par daudz - sludinājuma izveide var šķist pārāk nogurdinoša. Veidojot sludinājumu, ievades lauki parādās tikai tad, ja tos nepieciešams aizpildīt.</p>
 				</div>
 				<div class="small-12">
 					<figure>
@@ -151,7 +151,7 @@ nextPost: /portfolio/warehouse-lv
 			<div class="page-width">
 				<div class="medium-11 large-8 medium-centered">
 					<h2>Planšetdatora versija</h2>
-					<p>Arī planšetdatori ir mobilās ierīces, tāpēc portāla saturs tika pielāots arī lielāku mobilo ierīču ekrāniem. Lielāks ekrāna izmērs ļāva izvietot vairāk ērti pārskatāmus sludinājumus vertikālajā plaknē.</p>
+					<p>Arī planšetdatori ir mobilās ierīces, tāpēc portāla saturs tika pielāgots arī lielāku mobilo ierīču ekrāniem. Lielāks ekrāna izmērs ļāva izvietot vairāk ērti pārskatāmus sludinājumus vertikālajā plaknē.</p>
 				</div>
 				<div class="small-12">
 					<figure class="centered">
@@ -186,13 +186,13 @@ nextPost: /portfolio/warehouse-lv
 					<h2>Secinājumi</h2>
 					<div class="divider-lg"></div>
 					<h3 class="h4">1. Izmantot informācijas ievades laukus, kas ir paredzēti mobilajām ierīcēm</h3>
-					<p>Lietojot mobilās ierīces, tiek izmantoti citi mehānismi, kā lietotāji mijiedarbojas ar ierīci. Peles un fiziskas klaviatūras vietā izmantojam pieskārienus, pirksta slīdēšanu pa ekrānu. Informācijas ievades laukiem uz mobilajām ierīcēm jāatbilst tam, kā lietotāji izmanto šīs ierīces, tāpēc sludinājumu pievienošanas formā tiek izmantoti stepperi, slīdņi, radiogrupas un slēdži, nevis desktop vidē ierastie datu ievades lauku veidi.</p>
+					<p>Mobilajās ierīcēs tiek izmantoti citi mehānismi, kā lietotāji mijiedarbojas ar ierīci. Peles un fiziskas klaviatūras vietā izmantojam pieskārienus, pirksta slīdēšanu pa ekrānu. Informācijas ievades laukiem uz mobilajām ierīcēm jāatbilst tam, kā lietotāji izmanto šīs ierīces, tāpēc sludinājumu pievienošanas formā tiek izmantoti stepperi, slīdņi, radiogrupas un slēdži, nevis desktop vidē ierastie datu ievades lauku veidi.</p>
 					<h3 class="h4">2. Lietotāju panākumi ir mūsu panākumi</h3>
 					<p>Ja lietotājs var ātrāk atrast sev vēlamu preci, tā ir ne tikai viņa uzvara, bet arī mūsējā. Ja lietotājs var pievienot jaunu sludinājumu 5 minūtēs, nevis 10, tā ir ne tikai viņa uzvara, bet arī mūsējā.</p>
-					<h3 class="h4">3. Ja iespējams, nevajag slēpt iespējamās opcijas zem atveramās izvēlnes</h3>
-					<p>Ikviena atveramā izvēlne (<em>pull down menu</em>) slēpj virkni darbību, kuru atklāšanai ir jāpieliek pūles. Tieši tāpēc, piemēram, <strong>Pērk, Pārdod, Izīrē</strong> opcijas sludinājumu pievienošanā/meklēšanā nav paslēptas zem atveramās izvēlnes, bet uzreiz redzamas. Viens pieskāriens un ir izvēlēts vajadzīgais variants (2 pieskārienu vietā, ja tiktu izmantota atveramā izvēlne).</p>
+					<h3 class="h4">3. Ja iespējams, nevajag slēpt iespējamās opcijas zem atveramas izvēlnes</h3>
+					<p>Ikviena atveramā izvēlne (<em>pull down menu</em>) slēpj virkni darbību, kuru atklāšanai ir jāpieliek pūles. Tieši tāpēc, piemēram, <strong>Pērk, Pārdod, Izīrē</strong> opcijas sludinājumu pievienošanā un meklēšanā nav paslēptas zem atveramās izvēlnes, bet uzreiz redzamas. Viens pieskāriens un ir izvēlēts vajadzīgais variants (2 pieskārienu vietā, ja tiktu izmantota atverama izvēlne).</p>
 					<h4>4. Dizains nav sprinta disciplīna. Vienmēr būs vēl.</h4>
-					<p>Atskatoties uz paviekto, varu teikt, ka mēs labi pastrādājām, daudz ko jaunu iemācījāmies un tikpat daudz neizdarījām. Dizains nekad nav pabeigts. Laba dizaina pamatā ir standarti, bet vienmēr var pievienot vēl.</p>
+					<p>Atskatoties uz paveikto, varu teikt, ka mēs labi pastrādājām, daudz ko jaunu iemācījāmies un tikpat daudz neizdarījām. Dizains nekad nav pabeigts. Laba dizaina pamatā ir standarti, bet arī tiem klātesot, vienmēr var pievienot vēl.</p>
 				</div>
 			</div>
 		</section>
