--- a/portfolio/_posts/2018-03-05-bruklene.html
+++ b/portfolio/_posts/2018-03-05-bruklene.html
@@ -15,7 +15,7 @@ nextPost: /portfolio/zip
 		<section>
 			<div class="page-width">
 				<div class="medium-11 large-8 medium-centered sidenote-container">
-					<p>Viss skaistais ir vienkāršs… un tieši tāpēc mēs radījām brükleni - interneta veikalu, kur iegādāties eleganti vinkāršas apsveikuma kartiņas svētkiem un ikdienai. Brüklene kartiņas atsauc atmiņā skaistākās rindiņas no latviešu ziesmām un kinofilmām. Tās uzbur mirkli. Brüklene kartiņas piešķir jaunu elpu visu iemīļotajām latviešu dziesmu un kinofilmu rindiņām. Tās ir ietērptas vienkāršā dizainā, jo pats galvenais ir vēstījums. Mēs esam par skaistumu un saturu!</p>
+					<p>Viss skaistais ir vienkāršs… un tieši tāpēc mēs radījām brükleni - interneta veikalu, kur iegādāties eleganti vienkāršas apsveikuma kartiņas svētkiem un ikdienai. Brüklene kartiņas atsauc atmiņā skaistākās rindiņas no latviešu dziesmām un kinofilmām. Tās uzbur mirkli. Brüklene kartiņas piešķir jaunu elpu visu iemīļotajām latviešu dziesmu un kinofilmu rindiņām. Tās ir ietērptas vienkāršā dizainā, jo pats galvenais ir vēstījums. Mēs esam par skaistumu un saturu!</p>
 					<aside class="sidenote">
 						<ul class="list-unstyled">
 							<li><span>Gads: </span>2017&mdash;2018</li>
@@ -24,7 +24,7 @@ nextPost: /portfolio/zip
 						</ul>
 					</aside>
 					<h3 class="h4">Projekta mērķauditorija</h3>
-					<p>Brüklenes mērķauditorija ir cilvēki, kas iepriekš ir iepirkušies inernetā un šo iepirkšanās veidu uzskata par ērtu alternatīvu klasiskajiem veikaliem. Dažāda vecuma cilvēki, kam ierakstās kartiņas ar krāšņiem ziediem vairs nešķiet elegantas. Kas meklē vienkāršo un skaisto katrā ikdienas sīkumā.</p>
+					<p>Brüklenes mērķauditorija ir cilvēki, kas iepriekš ir iepirkušies internetā un šo iepirkšanās veidu uzskata par ērtu alternatīvu klasiskajiem veikaliem. Dažāda vecuma cilvēki, kam ierastās kartiņas ar krāšņiem ziediem vairs nešķiet elegantas. Kas meklē vienkāršo un skaisto katrā ikdienas sīkumā.</p>
 					<h3 class="h4">Projekta uzdevumi</h3>
 					<ul class="checklist checklist-assignments">
 						<li>Izveidot brüklenes zīmola vizuālo identitāti</li>
@@ -156,7 +156,7 @@ nextPost: /portfolio/zip
 						<p>Ienākot veiklā, apmeklētājam uzreiz ir jāsaprot, kur viņš ir nonācis un ko tur var nopirkt.</p>
 					</blockquote>
 					<p>Lielu uzsvaru likām uz produktiem. Vizuālajam fonam bija jābūt ļoti neitrālam, lai nekonfliktētu ar produktu bildēm.</p>
-					<p>Citu klientu ieteikumi ir viena no efektivākajām metodēm, kā iegūt jaunus klientus un palīdzēt viņiem izlemt, vai ir vērts ieguldīt mūsu produktā. Tieši tāpēc mēs atvēlējām pamanāmu vietu mūsu klientu Instagram bildēm.</p>
+					<p>Citu klientu ieteikumi ir viena no efektīvākajām metodēm, kā iegūt jaunus klientus un palīdzēt viņiem izlemt, vai ir vērts ieguldīt mūsu produktā. Tieši tāpēc atvēlējām pamanāmu vietu mūsu klientu Instagram bildēm.</p>
 				</div>
 				<div class="small-12">
 					<figure>
@@ -166,7 +166,7 @@ nextPost: /portfolio/zip
 				</div>
 				<div class="medium-11 large-8 medium-centered clear-centered">
 					<h3 class="h4 p-after-figure">Atvērta produkta skats</h3>
-					<p>Ja lietotājs ir izvēlējies apskatīt kādu produktu tuvāk, tad jādod tas, ko viņš sagaida - papildus produkta attēlus, produkta raksturojumu un iespēju izvēlēties pasūtāmo produkta dauddzumu. Papildus tam, pie katra indivuduāla produkta iekļāvām aicinājumu izvietot uzņēmuma logo uz kartiņām. Izvēlējāmies neveidot atsevišķu sadaļu uzņēmumiem, bet uzrunāt apmeklētējus <strong>tieši pie produkta</strong>, tur un tad, kad šī informācija pircējam ir visaktuālākā.</p>
+					<p>Ja lietotājs ir izvēlējies apskatīt kādu produktu tuvāk, tad jādod tas, ko viņš sagaida - papildus produkta attēlus, produkta raksturojumu un iespēju izvēlēties pasūtāmā produkta daudzumu. Papildus tam, pie katra indivuduāla produkta iekļāvām aicinājumu izvietot uzņēmuma logo uz kartiņām. Izvēlējāmies neveidot atsevišķu sadaļu uzņēmumiem, bet uzrunāt apmeklētējus <strong>tieši pie produkta</strong>, tur un tad, kad šī informācija pircējam ir visaktuālākā.</p>
 				</div>
 				<div class="small-12">
 					<figure>
@@ -176,7 +176,7 @@ nextPost: /portfolio/zip
 				</div>
 				<div class="medium-11 large-8 medium-centered clear-centered">
 					<h3 class="h4 p-after-figure">Pirkumu grozs</h3>
-					<p>Pirkuma groza būtībai jābūt šādai &ndash; ātri pārskatāms izvēlēto produktu saraksts, daudzums un galējā summa, ko nāksies samaksāt. Šiem elementiem bija jābūt ātri atrodamiem un nepārprotamiem. Pirkšanas pogas tekstā arī pievienojām māksājamo summu, lai lietotājam būtu skaidrs, kas notiks pēc pogas nospiešanas.</p>
+					<p>Pirkuma groza būtībai jābūt šādai &ndash; ātri pārskatāms izvēlēto produktu saraksts, daudzums un galējā summa, ko nāksies samaksāt. Šiem elementiem bija jābūt ātri atrodamiem un nepārprotamiem. Pirkšanas pogas tekstā pievienojām māksājamo summu, lai lietotājam būtu skaidrs, kas notiks pēc pogas nospiešanas.</p>
 				</div>
 				<div class="small-12">
 					<figure>
@@ -186,7 +186,7 @@ nextPost: /portfolio/zip
 				</div>
 				<div class="medium-11 large-8 medium-centered clear-centered">
 					<h3 class="h4 p-after-figure">Mūsu stāsts</h3>
-					<p>Mūsu mērķauditorijai, izvēloties produktus ko iegādāties, sarīgs ir arī stāsts, kas nāks kopā ar produktu. Stāsts, kas viņu iegādātajiem produktiem iedos papildus vērtību. Stāsts, kas padarīs kartiņu par vēl labāku dāvanu. Šim stāstam tika izveidota atsevišķa sadaļa galvenajā izvēlnē.</p>
+					<p>Mūsu mērķauditorijai, izvēloties produktus, ko iegādāties, svarīgs ir arī stāsts, kas pavadīs produktu. Stāsts, kas viņu iegādātajiem produktiem iedos papildus vērtību. Stāsts, kas padarīs kartiņu par vēl labāku dāvanu. Šim stāstam tika izveidota atsevišķa sadaļa galvenajā izvēlnē.</p>
 				</div>
 				<div class="small-12">
 					<figure>
@@ -226,11 +226,11 @@ nextPost: /portfolio/zip
 					<h2>Secinājumi</h2>
 					<div class="divider-lg"></div>
 					<h3 class="h4">1. Vienmēr nākošais solis</h3>
-					<p>Interneta veikala apmeklētājiem vienmēr ir jādod nākošais solis. Jāstimulē apmeklēt vēl kāda lapa. Jāstimulē iegādāties vel kāds produkts. Jānotur apmeklētājs ilgāk. Šajā gadījumā nākošais solis bija &ldquo;Tev varētu patikt&rdquo; sadaļa, kur tiks piedāvāti līdzīgi vai papildinoši produkti jau noskatītajam.</p>
+					<p>Interneta veikala apmeklētājiem vienmēr ir jādod nākošais solis. Jāstimulē apmeklēt vēl kāda lapa. Jāstimulē iegādāties vēl kāds produkts. Jānotur apmeklētājs ilgāk. Šajā gadījumā nākošais solis bija &ldquo;Tev varētu patikt&rdquo; sadaļa, kur tiek piedāvāti līdzīgi vai papildinoši produkti jau noskatītajam.</p>
 					<h3 class="h4">2. Jāatstāj vieta augšanai</h3>
-					<p>Brüklenes gadījumā apsveikuma kartiņas ir tikai sākums. Laika gaitā ir plānots pievienot citus produktus. Gan nosaukums, gan interneta veikala izkārtojums, gan uzrakstītais kods ļauj attīstīt zīmolu. Pievienot produktus, jaunas produktu kategorijas un iespējams arī pakalpojumus.</p>
+					<p>Brüklenes gadījumā apsveikuma kartiņas ir tikai sākums. Laika gaitā ir plānots pievienot citus produktus. Gan nosaukums, gan interneta veikala izkārtojums, gan uzrakstītais kods ļauj attīstīt zīmolu. Pievienot produktus, jaunas produktu kategorijas un, iespējams, arī pakalpojumus.</p>
 					<h3 class="h4">3. Interneta veikala dizains nedrīks dominēt pār pārdodamo produktu</h3>
-					<p>Veikala apmeklētāji nenāk apbrīnot veikala dizainu (un, ja nāk, tad tikai tāpēc, lai to nokopētu), bet, lai atrastu meklējamo produktu. Produktam ir jābūt primāram. Produktam ir jābūt pamanāmam. Interneta veikalu var salīdiznāt ar aizsargu futbola spēlē. Aizsrargu spēle nav tā ekspresīvākā. Viņi nav tie, kas sit vārtus. Nav tie, kas saņem balvas. Viņu uzdevums ir palīdzēt uzbrūcējiem. Darīt melno darbu. Tikai īsti futbola fani novērtē un pamana aizsargu pienesumu.</p>
+					<p>Veikala apmeklētāji nenāk apbrīnot veikala dizainu (un, ja nāk, tad tikai tāpēc, lai to nokopētu), bet, lai atrastu meklējamo produktu. Produktam ir jābūt primāram. Produktam ir jābūt pamanāmam. Interneta veikalu var salīdzināt ar aizsargu futbola spēlē. Aizsargu spēle nav tā ekspresīvākā. Viņi nav tie, kas sit vārtus. Nav tie, kas saņem balvas. Viņu uzdevums ir palīdzēt uzbrucējiem. Darīt melno darbu. Tikai īsti futbola fani novērtē un pamana aizsargu pienesumu.</p>
 				</div>
 			</div>
 		</section>
