--- a/portfolio/_posts/2018-03-06-draugiem.html
+++ b/portfolio/_posts/2018-03-06-draugiem.html
@@ -35,7 +35,7 @@ nextPost: /portfolio/bruklene
 				<div class="medium-11 large-8 medium-centered">
 					<h2>TV Programma</h2>
 					<p>Domājot par to, kā motivēt lietotājus ienākt portālā katru dienu, tika nolemts ieviest TV Programmas sadaļu. Portāla auditorija ir arī aktīva televīzijas auditorija, tāpēc šāds solis šķita pamatots.</p>
-					<p>Sākot darbu pie TV Programmas, izpētīju jau esošu TV programmu izkārtojumus. Izvērtējot apmēram 15 eksistējošus variantus, secināju, ka starp šiem variantiem atkārtojas <strong>3 satura izkārtojumu iespējas</strong>. Izvēlējos 3 eksistējošas TV Programmas (<a href="https://tv.lattelecom.lv/lv/programma/interaktiva/list/ltv1/11.03.2018">Lattelecom programma</a>, <a href="http://tv-programma.delfi.lv/#/guide/?cid=201,202,204,203&gid=22&cgi=0">Delfi programma</a>, <a href="https://baltcom.lv/tv-programma/">Baltcom programma</a>) un pajautāju gan kolēģiem, gan paziņām, kas ir draugiem.lv lietotāji, lai viņi atrod:</p>
+					<p>Sākot darbu pie TV Programmas, izpētīju jau esošu TV programmu izkārtojumus. Izvērtējot apmēram 15 eksistējošus variantus, secināju, ka starp šiem variantiem atkārtojas <strong>3 satura izkārtojumu iespējas</strong>. Izvēlējos 3 TV programmas (<a href="https://tv.lattelecom.lv/lv/programma/interaktiva/list/ltv1/11.03.2018">Lattelecom programma</a>, <a href="http://tv-programma.delfi.lv/#/guide/?cid=201,202,204,203&gid=22&cgi=0">Delfi programma</a>, <a href="https://baltcom.lv/tv-programma/">Baltcom programma</a>) un pajautāju gan kolēģiem, gan paziņām, kas ir draugiem.lv lietotāji, lai viņi atrod:</p>
 					<ul>
 						<li>cikos sākas konkrēta pārraide kādā no TV kanāliem (piemēram, cikos ir pārraides <a href="https://ltv.lsm.lv/lv/izklaide/v.i.p./">VIP</a> atkārtojums sestdien kanālā LTV;</li>
 						<li>ko ir iespējams skatīties konkrētā kanālā konkrētā laikā (piemēram, kas tiek pārraidīt kanālā LNT rītdien pēc darba laika).</li>
@@ -70,7 +70,7 @@ nextPost: /portfolio/bruklene
 					</figure>
 				</div>
 				<div class="medium-11 large-8 medium-centered clear-centered">
-					<p class="p-after-figure">Jaunā TV Programmas sadaļa tika izziņota ar paziņojumu galvenajā izvēlnē portāla augšpusē. Bet, pēc pirmreizējās atvēršanas, lietotājiem bija grūtības atcerēties, kur izvēlnē ir paslēpusies TV Programma. Lai to risinātu nolēmām ielikt programmas kartiņu sadaļā <a href="https://www.draugiem.lv/sodien/">Šodien</a>. Tagad katru dienu liela daļa portāla lietotāju var ērti atrast TV programmu.</p>
+					<p class="p-after-figure">Jaunā TV programmas sadaļa tika izziņota ar paziņojumu galvenajā izvēlnē portāla augšpusē. Bet, pēc pirmreizējās atvēršanas, lietotājiem bija grūtības atcerēties, kur izvēlnē ir paslēpusies TV programma. Lai to risinātu, nolēmām ielikt programmas kartiņu sadaļā &ldquo;<a href="https://www.draugiem.lv/sodien/">Šodien</a>&rdquo;. Tagad katru dienu liela daļa portāla lietotāju var ērti atrast TV programmu.</p>
 				</div>
 				<div class="small-12">
 					<figure class="xlarge-pull-1 xlarge-push-1">
@@ -85,7 +85,7 @@ nextPost: /portfolio/bruklene
 			<div class="page-width">
 				<div class="medium-11 large-8 medium-centered">
 					<h2>Mūzika</h2>
-					<p>Mūzikas sadaļa draugiem.lv nav pati apmeklētākā, bet tiem, kas sadaļu izmanto katru dienu, bija nepieciešamas izmaiņas &ndash; ērtāka dziesmu atrašana, dziesmu saglabāšana, navigēšana starp dziesmās un dziesmu sadale pa izlasēm. Otrs iemesls, kāpēc sadaļu bija nepieciešams pārtaisīt &ndash; interneta pārlūki pamazāk sāka neatbalstīt <a href="https://www.adobe.com/products/flashplayer.html">Flash</a> tehnoloģiju, uz kuras iepriekšējā mūzikas sadaļa tika balstīta.</p>
+					<p>Mūzikas sadaļa draugiem.lv nav pati apmeklētākā, bet tiem, kas sadaļu izmanto katru dienu, bija nepieciešamas izmaiņas &ndash; ērtāka dziesmu atrašana, dziesmu saglabāšana, navigēšana starp dziesmās un dziesmu sadale pa izlasēm. Otrs iemesls, kāpēc sadaļu bija nepieciešams pārtaisīt &ndash; interneta pārlūki pamazām sāka neatbalstīt <a href="https://www.adobe.com/products/flashplayer.html">Flash</a> tehnoloģiju, uz kuras iepriekšējā mūzikas sadaļa tika balstīta.</p>
 				</div>
 				<div class="small-12">
 					<figure class="xlarge-pull-1 xlarge-push-1">
@@ -94,7 +94,7 @@ nextPost: /portfolio/bruklene
 					</figure>
 				</div>
 				<div class="medium-11 large-8 medium-centered clear-centered">
-					<p class="p-after-figure">Jaunas dziesmas publicēšana automātiksi izveido jaunu Runā ierakstu. Tagad jau Runā ierakstā ir iespēja dziesmu saglabāt kādā no izlasēm vai arī nobalsot par to, ja mūziķis šo dziesmu ir ievietojis draugiem.lv mūzikas sadaļas Topā.</p>
+					<p class="p-after-figure">Jaunas dziesmas publicēšana automātiski izveido jaunu Runā ierakstu. Tagad jau Runā ierakstā ir iespēja dziesmu saglabāt kādā no izlasēm vai arī nobalsot par to, ja mūziķis šo dziesmu ir ievietojis draugiem.lv mūzikas sadaļas Topā.</p>
 				</div>
 				<div class="small-12">
 					<figure class="xlarge-pull-1 xlarge-push-1">
@@ -116,7 +116,7 @@ nextPost: /portfolio/bruklene
 				<div class="medium-11 large-8 medium-centered">
 					<h2>Braucam kopā</h2>
 					<p>Dizaina procesā <em>empātija</em> ir viens no svarīgākajiem aspektiem. Tikai izprotot lietotāju problēmas, paradumus un vēlmes, ir iespējams veiksmīgs rezultāts. &ldquo;Braucam kopā&rdquo; sadaļas atjaunošana man personīgi bija ilgi gaidīts projekts, jo pats esmu regulārs sadaļas lietotājs &ndash; gan meklēju šoferus, gan piedāvāju vietas savā automašīnā. Man bija izveidojies lielisks priekšstats par to, ko ir nepieciešams uzlabot.</p>
-					<p>Projekta sākumā kopā ar projekta vadītāju aptaujājām aktīvos sadaļas lietotājus. Vēlējāmies uzzināt, kas viņiem nepatīk pašreizējā produkta versijā un ko vēlētos redzēt nākamajā. Kopā saņēmām 87 komentārus, no kuriem tikai daži nevēlējās mainīt neko esošajā produktā, savukārt pērējiem bija vērtīgi komentāri par to, kā uzlabot lietotāju pieredzi. Esmu apkopojis galvenās lietas, par kurām rakstīja aptaujātie.</p>
+					<p>Projekta sākumā kopā ar projekta vadītāju aptaujājām aktīvos sadaļas lietotājus. Vēlējāmies uzzināt, kas viņiem nepatīk pašreizējā produkta versijā un ko vēlētos redzēt nākamajā. <strong>Kopā saņēmām 87 komentārus</strong>. Tikai daži no aptaujātajiem lietotājiem nevēlējās mainīt neko esošajā produktā, savukārt pārējiem bija vērtīgi komentāri par to, kā uzlabot lietotāju pieredzi. Esmu apkopojis galvenās lietas, kas atkārtojās vairākkārt.</p>
 				</div>
 				<div class="page-width">
 					<div class="medium-11 large-10 medium-centered">
@@ -147,7 +147,7 @@ nextPost: /portfolio/bruklene
 					</figure>
 				</div>
 				<div class="medium-11 large-8 medium-centered clear-centered">
-					<p class="p-after-figure"><em>Melnrakstu</em> veidošanās procesā sapratu, ka 3 svarīgākie elementi ir &ldquo;Braucēja tips&rdquo;, &ldquo;Virziens&rdquo; un &ldquo;Laiks&rdquo;. Tikai tad, ja visi šie 3 elementi atbilst, sludinājumu ir vērts lasīt pilnībā. Tāpēc šai informācijai bija jābūt sludinājuma augšpusē un pamanāmai. Pārējā informācija ir sekundāra.</p>
+					<p class="p-after-figure"><em>Melnrakstu</em> veidošanas procesā sapratu, ka 3 svarīgākie elementi ir &ldquo;Braucēja tips&rdquo;, &ldquo;Virziens&rdquo; un &ldquo;Laiks&rdquo;. Tikai tad, ja visi šie 3 elementi atbilst, sludinājumu ir vērts lasīt pilnībā. Tāpēc šai informācijai bija jābūt sludinājuma augšpusē un pamanāmai. Pārējā informācija ir sekundāra.</p>
 				</div>
 				<div class="small-12">
 					<figure class="xlarge-pull-1 xlarge-push-1">
@@ -178,7 +178,7 @@ nextPost: /portfolio/bruklene
 			<div class="page-width">
 				<div class="medium-11 large-8 medium-centered">
 					<h2>Android lietotne</h2>
-					<p>Lai arī portāla desktop versija tiek apmeklēta visvairāk, mobilo versiju lietotāji procentuāli palielinās. Visam saturam jābūt ērti pieejamam arī uz mobilajām ierīcēm. Draugiem.lv Android aplikācijas pamatā ir Google veidotais <a href="https://material.io/">Materiālais dizains</a>. Tā ir vienota dizaina sistēma ar iepriekš definētām dizaina vadlīnijām un komponentēm. Arī draugiem.lv izmanto šīs vadlīnijas, lai mūsu aplikācija iekļautos kopējā Android ekosistēmā un šķistu lietotājam pazīstama jau no pirmajiem lietošanas brīžiem.</p>
+					<p>Lai arī portāla desktop versija tiek apmeklēta visvairāk, mobilo versiju lietotāji procentuāli palielinās. Visam saturam jābūt ērti pieejamam arī uz mobilajām ierīcēm. Draugiem.lv Android aplikācijas pamatā ir Google veidotais <a href="https://material.io/">Materiālais dizains</a>. Tā ir vienota dizaina sistēma ar definētām dizaina vadlīnijām un komponentēm. Arī draugiem.lv izmanto šīs vadlīnijas, lai mūsu aplikācija iekļautos kopējā Android ekosistēmā un šķistu lietotājam pazīstama jau no pirmajiem lietošanas brīžiem.</p>
 				</div>
 				<div class="small-12">
 					<figure class="xlarge-pull-1 xlarge-push-1">
@@ -198,7 +198,7 @@ nextPost: /portfolio/bruklene
 			<div class="page-width">
 				<div class="small-centered large-8 section-description">
 					<h3 class="centered">Vēstuļu sadaļa</h3>
-					<p class="centered">Komunikācija ir sociālo portālu pamats. 2017. gadā vēstuļu sadaļā tika iesviesta opcija pievienot emociju cita sarakstes dalībnieka ziņai. Tas tika darīts, lai nebūtu jāraksta jauna ziņa, ja viss, ko lietotājs vēlas izdarīt, ir reaģēt tikai ar emocijas ikonu.</p>
+					<p class="centered">Komunikācija ir sociālo portālu pamats. 2017. gadā vēstuļu sadaļā tika ieviesta opcija pievienot emociju cita sarakstes dalībnieka ziņai. Tas tika darīts, lai nebūtu jāraksta jauna ziņa, ja viss, ko lietotājs vēlas izdarīt, ir reaģēt tikai ar emocijas ikonu.</p>
 				</div>
 				<div class="xlarge-pull-2 xlarge-push-2">
 					<div class="small-6 large-3">
@@ -232,14 +232,14 @@ nextPost: /portfolio/bruklene
 				<div class="medium-11 large-8 medium-centered">
 					<h2>Secinājumi</h2>
 					<div class="divider-lg"></div>
-					<h3 class="h4">1. Jo vairāk infrmācijas par lietotāju, jo labāk</h3>
-					<p>Labs dizains ir iespējams tikai tad, ja ir skaidri definēta mērķauditorija. Draugiem.lv ir sociāls portāls &ndash; vieta, kur ikvienam lietotājam obligāti jānorāda savs dzimums un vecums. Vieta, kur lietotāju intereses un paradumi ir salīdzinoši viegli izsecināmi. Tas viss ļoti palīdzēja, veidojot lietotājiem atbilštošus un draudzīgus risinājumus.</p>
+					<h3 class="h4">1. Jo vairāk informācijas par lietotāju, jo labāk</h3>
+					<p>Labs dizains ir iespējams tikai tad, ja ir skaidri definēta mērķauditorija. Draugiem.lv ir sociāls portāls &ndash; vieta, kur ikvienam lietotājam obligāti jānorāda savs dzimums un vecums. Vieta, kur lietotāju intereses un paradumi ir salīdzinoši viegli izsecināmi. Tas viss ļoti palīdzēja, veidojot lietotājiem atbilstošus un draudzīgus risinājumus.</p>
 					<h3 class="h4">2. Nevajag akli sekot dizaina vadlīnijām</h3>
-					<p>Draugiem.lv Android aplikācijas pamatā ir Google veidotās dizaina vadlīnijas Android ierīcēm. Pārstrādājot lietotnes apakšējo navigāciju pēc šīm vadlīnijām, sapratām, ka nav paredzēts apakšējā izvēlnē attēlot 5 ikonas kopā ar ikonu paskaidrojošiem teksiem - tikai ikonas. Ja būtu 4 ikonas, tad paskaidrojošo tekstu vadlīnijas pieļauj. Šajā gadījumā izlēmām ignorēt konkrēto vadlīniju un pielikt paskaidrojošos tekstus pie visām ikonām. Android lietotnes izstrādātājam tas nozīmēja papildus darbu, jo apakšējās izvēlnes komponente Androīdam ir definēta arī kodā. Nācās pārrakstīt Androīd noklusējuma kodu šim elementam.</p>
+					<p>Draugiem.lv Android aplikācijas pamatā ir Google veidotās dizaina vadlīnijas Android ierīcēm. Pārstrādājot lietotnes apakšējo navigāciju pēc šīm vadlīnijām, sapratām, ka nav paredzēts apakšējā izvēlnē attēlot 5 ikonas kopā ar ikonu paskaidrojošiem tekstiem - tikai ikonas. Ja būtu 4 ikonas, tad paskaidrojošo tekstu vadlīnijas pieļauj. Šajā gadījumā izlēmām ignorēt konkrēto vadlīniju un pielikt paskaidrojošos tekstus pie visām ikonām. Android lietotnes izstrādātājam tas nozīmēja papildus darbu, jo apakšējās izvēlnes komponente Androīdam ir definēta arī kodā. Nācās pārrakstīt Androīda noklusējuma kodu šim elementam.</p>
 					<h3 class="h4">3. Kontrasts ir risinājums vairumam dizaina problēmu</h3>
 					<p>Ja man būtu jāizvēlas viena lieta, kas ir vissvarīgākā dizainā, tad es izvēlos kontrastu. Kontrasts, kas vada lasītāja skatienu. Kontrasts starp tekstu un fonu. Kontrasts starp prioritāriem un sekundāriem elementiem. Kontrasts starp saturu un negatīvo telpu. Kontrasts ir tas, kas liek paskatīties tur, kur mēs vēlamies. Kontrasts ir tas, kas neļauj acij nogarlaikoties. Vājš kontrasts un viss saplūst vienā pelēkā masā.</p>
 					<h3 class="h4">4. Labs gala rezultāts = labs komandas darbs</h3>
-					<p>Darbs pie draugiem.lv nenorit vienatnē. Iesaistīti ir gan projektu vadītāji, gan izstrādātāji, gan satura veidotāji. Ikkatrs no viņiem ietekmē to, kāds būs gala rezultāts. Ikkatrs mans lēmums ir balstīts arī uz viņu sniegtās informācijas. Paldies arī pārējiem draugiem.lv dizaineriem Artūram Vanagam, Tomam Rītam, Krišjānim Mežulim. Viņu <em>pēdas</em> un ieguldījums ir redzamas visos manos dizainos. Gala rezultāts bez viņu palīdzības būtu pavisam savādāks.</p>
+					<p>Darbs pie draugiem.lv nenorit vienatnē. Iesaistīti ir gan projektu vadītāji, gan izstrādātāji, gan satura veidotāji. Ikkatrs no viņiem ietekmē to, kāds būs gala rezultāts. Ikkatrs mans lēmums ir balstīts arī uz viņu sniegtās informācijas. Paldies arī pārējiem draugiem.lv dizaineriem &ndash; <a href="https://twitter.com/mieram">Artūram Vanagam</a>, <a href="https://twitter.com/piecdesmit">Tomam Rītam</a>, <a href="https://www.instagram.com/krisjanismezulis/">Krišjānim Mežulim</a>. Viņu <em>pēdas</em> un ieguldījums ir redzamas visos manos dizainos. Gala rezultāts bez viņu palīdzības būtu pavisam savādāks.</p>
 				</div>
 			</div>
 		</section>
